--- a/vagrant/playbook.yaml
+++ b/vagrant/playbook.yaml
@@ -79,12 +79,12 @@
 
     - name: Download Prometheus
       get_url:
-        url: https://github.com/prometheus/prometheus/releases/download/v2.45.0/prometheus-2.45.0.linux-amd64.tar.gz
-        dest: /tmp/prometheus-2.45.0.linux-amd64.tar.gz
+        url: https://github.com/prometheus/prometheus/releases/download/v3.0.1/prometheus-3.0.1.linux-386.tar.gz
+        dest: /tmp/prometheus-3.0.1.linux-386.tar.gz
 
     - name: Extract Prometheus
       unarchive:
-        src: /tmp/prometheus-2.45.0.linux-amd64.tar.gz
+        src: /tmp/prometheus-3.0.1.linux-386.tar.gz
         dest: /opt/
         remote_src: yes
 
@@ -94,10 +94,10 @@
         state: present
 
     - name: Move Prometheus files to /usr/local/bin
-      command: mv /opt/prometheus-2.45.0.linux-amd64/prometheus /usr/local/bin/
+      command: mv /opt/prometheus-3.0.1.linux-386/prometheus /usr/local/bin/
     
     - name: Move Prometheus server files to /etc/prometheus
-      command: mv /opt/prometheus-2.45.0.linux-amd64/promtool /usr/local/bin/
+      command: mv /opt/prometheus-3.0.1.linux-386/promtool /usr/local/bin/
     
     - name: Create Prometheus configuration directory
       file:
@@ -106,15 +106,22 @@
         owner: prometheus
         group: prometheus
 
+    - name: Create Prometheus configuration directory
+      file:
+        path: /var/lib/prometheus
+        state: directory
+        owner: prometheus
+        group: prometheus    
+
     - name: Move Prometheus configuration file to correct location
       copy:
-        src: /opt/prometheus-2.45.0.linux-amd64/prometheus.yml
+        src: /opt/prometheus-3.0.1.linux-386/prometheus.yml
         dest: /etc/prometheus/prometheus.yml
         owner: prometheus
         group: prometheus
         remote_src: yes  # This ensures the file is copied from the remote server, not the local machine
 
-
+  
     - name: Setup Prometheus service
       copy:
         content: |
@@ -130,15 +137,23 @@
           WantedBy=multi-user.target
         dest: /etc/systemd/system/prometheus.service
 
+    - name: Set correct permissions for the web directory
+      file:
+          path: /etc/prometheus/
+          state: directory
+          owner: prometheus
+          group: prometheus
+          mode: '0777'
+  
 # Install Node Exporter from GitHub
     - name: Download Node Exporter
       get_url:
         url: https://github.com/prometheus/node_exporter/releases/download/v1.8.2/node_exporter-1.8.2.linux-amd64.tar.gz
-        dest: /tmp/node_exporter-1.7.2.linux-amd64.tar.gz
+        dest: /tmp/node_exporter-1.8.2.linux-amd64.tar.gz
 
     - name: Extract Node Exporter
       unarchive:
-        src: /tmp/node_exporter-1.7.2.linux-amd64.tar.gz
+        src: /tmp/node_exporter-1.8.2.linux-amd64.tar.gz
         dest: /opt/
         remote_src: yes
 
@@ -198,6 +213,13 @@
         regexp: '^#?org_role ='
         line: 'org_role = Viewer'
 
+    - name: Enable embedding in Grafana
+      lineinfile:
+        path: /etc/grafana/grafana.ini
+        insertafter: '\[security\]'
+        line: "allow_embedding = true"
+        state: present
+    
     - name: Restart service grafana
       ansible.builtin.service:
         name: grafana-server
